--- a/app/index.html
+++ b/app/index.html
@@ -29,7 +29,13 @@
 
 	<!-- BODY -->
 	<body>
-		<h1>The perfect place to build components</h1>
+		<h1 style="text-align:center">it slides</h1>
+		{{justatest}}
+		<it-slider ng-model="justatest"></it-slider>
+		<it-slider ng-model="justanothertest"></it-slider>
+		<it-slider ng-model="justanothertest"></it-slider>
+
+
 		<!-- AngularJS and components thereof -->
 		<script
 			type="text/javascript"
