--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
 	<!-- HEAD -->
 	<head>
 
-		<title>Component Test Bed</title>
+		<title>itSlides Test Bed</title>
 
 		<!-- Locks zooming on mobile devices, sets an initial zoom of 1 and doesn't allow for change  -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>  
@@ -12,10 +12,6 @@
 		<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
 
 		<!-- Cascading Style Sheet(s) -->
-		<link
-      rel="stylesheet"
-      type="text/css"
-      href="bower_components/bootstrap/dist/css/bootstrap.css"/>
 
 		<!-- build:css styles/optimized.css -->
 		<link
@@ -39,40 +35,15 @@
 		<!-- AngularJS and components thereof -->
 		<script
 			type="text/javascript"
-			src="bower_components/angular/angular.js">
-		</script>
-		<script
-			type="text/javascript"
-			src="bower_components/angular-resource/angular-resource.js">
-		</script>
-		<script
-			type="text/javascript"
-			src="bower_components/angular-route/angular-route.js">
-		</script>
-		<script
-			type="text/javascript"
-			src="bower_components/angular-animate/angular-animate.js">
-		</script>
-		<script
-			type="text/javascript"
-			src="bower_components/angular-sanitize/angular-sanitize.js">
-		</script>
-
-		<script
-			type="text/javascript"
-			src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js">
-		</script>
-
-		<!-- ReCaptcha (requires php folder as well) -->
-		<script
-			type="text/javascript"
-			src="//www.google.com/recaptcha/api/js/recaptcha_ajax.js">
+			src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js">
 		</script>
 		
+		<!-- build:js mainApp.js -->
 		<script
 			type="text/javascript"
 			src="scripts/mainApp.js">
 		</script>
+		<!-- endbuild -->
 		<script
 			type="text/javascript"
 			src="component/component.js">
