Updated to be touch friendly, also some minor bug fixing for the position.

--- a/app/index.html
+++ b/app/index.html
@@ -46,7 +46,7 @@
 		<!-- endbuild -->
 		<script
 			type="text/javascript"
-			src="component-min.js">
+			src="component/component.js">
 		</script>
 	</body>
 
