small tweak to use currency filter

--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,7 @@
 			All by itself {{justatest}}
 			<it-slider ng-model="justatest"></it-slider>
 			Bound to the same model
-			{{justanothertest}}
+			{{justanothertest | currency}}
 			<it-slider ng-model="justanothertest"></it-slider>
 			<it-slider ng-model="justanothertest"></it-slider>
 		</div>
