Updating the module name to avoid potential conflicts

--- a/app/index.html
+++ b/app/index.html
@@ -27,6 +27,7 @@
 	<body>
 		<h1 style="text-align:center">it slides</h1>
 		<div class="testContainer">
+			<input type="text" ng-model="justatest"/>
 			All by itself {{justatest}}
 			<it-slider ng-model="justatest"></it-slider>
 			Bound to the same model
@@ -50,7 +51,7 @@
 		<!-- endbuild -->
 		<script
 			type="text/javascript"
-			src="component-min.js">
+			src="component/component.js">
 		</script>
 	</body>
 
